[tool.poetry]
name = "fixed-gear-guide"
version = "0.1.0"
description = ""
authors = ["uj <aulien.jbadji@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^7.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
